--- a/OnlineTutor2/Views/StudentManagement/Index.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Index.cshtml
@@ -113,7 +113,7 @@ else
                             </th>
                             <th>Контакты</th>
                             <th>Школа/Класс</th>
-                            <th>Назначен в класс</th>
+                            <th>Онлайн-класс</th>
                             <th>
                                 <a asp-action="Index" asp-route-sortOrder="@ViewBag.DateSortParm" 
                                    asp-route-currentFilter="@ViewBag.CurrentFilter" asp-route-classFilter="@ViewBag.ClassFilter"
