--- a/OnlineTutor2/Views/Test/SpellingTests.cshtml
+++ b/OnlineTutor2/Views/Test/SpellingTests.cshtml
@@ -152,6 +152,6 @@ else
     </div>
 }
 
-@section Scripts {
+@* @section Scripts {
     <script src="~/js/layout.js" asp-append-version="true"></script>
-}
+} *@
