--- a/OnlineTutor2/Views/Class/Index.cshtml
+++ b/OnlineTutor2/Views/Class/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="d-flex justify-content-between align-items-center mb-4">
-    <h2><i class="fas fa-users text-primary"></i> Мои классы</h2>
+    <h2><i class="fas fa-users text-primary"></i> Онлайн-классы</h2>
     <a asp-action="Create" class="btn btn-success">
         <i class="fas fa-plus"></i> Создать класс
     </a>
