--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -129,7 +129,8 @@
     </div>
 </div>
 
-<div class="card mb-4">
+
+<div class="card">
     <div class="card-header d-flex justify-content-between align-items-center">
         <h5 class="mb-0">
             <i class="fas fa-list"></i> Вопросы теста (@Model.Questions.Count)
@@ -227,9 +228,9 @@
     </div>
 </div>
 
-@if (Model.TestResults.Any())
+@* @if (Model.TestResults.Any())
 {
-    <div class="card mb-4">
+    <div class="card mt-4">
         <div class="card-header">
             <h5 class="mb-0">
                 <i class="fas fa-chart-line"></i> Последние прохождения
@@ -298,7 +299,7 @@
             }
         </div>
     </div>
-}
+} *@
 
 <div class="modal fade" id="questionModal" tabindex="-1">
     <div class="modal-dialog">
