--- a/OnlineTutor2/wwwroot/css/site.css
+++ b/OnlineTutor2/wwwroot/css/site.css
@@ -111,8 +111,8 @@ body {
 }
 
 .main-content {
-    min-height: calc(100vh - 220px);
-    padding-bottom: 70px; 
+    min-height: auto;
+    padding-bottom: 20px;
 }
 
 .footer-column h6 {
@@ -296,7 +296,7 @@ body {
     }
 
     .main-content {
-        min-height: calc(100vh - 140px);
+        min-height: auto;
         padding-bottom: 10px;
     }
 
@@ -336,7 +336,7 @@ body {
     }
 
     .main-content {
-        min-height: calc(100vh - 135px);
+        min-height: auto;
     }
 
     .footer-copyright-mobile small {
