--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -228,7 +228,7 @@
     </div>
 </div>
 
-@* @if (Model.TestResults.Any())
+@if (Model.TestResults.Any())
 {
     <div class="card mt-4">
         <div class="card-header">
@@ -299,7 +299,7 @@
             }
         </div>
     </div>
-} *@
+}
 
 <div class="modal fade" id="questionModal" tabindex="-1">
     <div class="modal-dialog">
