--- a/OnlineTutor2/Views/PunctuationTest/Details.cshtml
+++ b/OnlineTutor2/Views/PunctuationTest/Details.cshtml
@@ -159,8 +159,8 @@
                     <thead class="table-light">
                         <tr>
                             <th style="width: 50px;">#</th>
-                            <th>Предложение с номерами</th>
-                            <th>Правильные позиции</th>
+                            <th>Вопрос</th>
+                            <th>Ответ</th>
                             <th style="width: 80px;">Баллы</th>
                             <th style="width: 120px;">Действия</th>
                         </tr>
