--- a/OnlineTutor2/Views/SpellingTest/Details.cshtml
+++ b/OnlineTutor2/Views/SpellingTest/Details.cshtml
@@ -161,9 +161,9 @@
                     <thead class="table-light">
                         <tr>
                             <th style="width: 50px;">#</th>
-                            <th>Слово с пропуском</th>
-                            <th>Правильный ответ</th>
-                            <th>Полное слово</th>
+                            <th>Вопрос</th>
+                            <th>Ответ</th>
+                            <th>Слово</th>
                             <th style="width: 80px;">Баллы</th>
                             <th style="width: 120px;">Действия</th>
                         </tr>
