--- a/OnlineTutor2/Views/StudentManagement/Edit.cshtml
+++ b/OnlineTutor2/Views/StudentManagement/Edit.cshtml
@@ -110,7 +110,7 @@
 
                         <div class="mb-3">
                             <label asp-for="ClassId" class="form-label">
-                                <i class="fas fa-users"></i> Назначен в онлайн-класс
+                                <i class="fas fa-users"></i> Онлайн-класс
                             </label>
                             <select asp-for="ClassId" class="form-select" asp-items="@ViewBag.Classes">
                                 <option value="">Без назначения в класс</option>
