--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Student" asp-action="Index">
-                                        <i class="fas fa-user-graduate"></i> Кабинет
+                                        <i class="fas fa-user-graduate"></i> Класс
                                     </a>
                                 </li>
                                 <li class="nav-item dropdown">
