fix register front

--- a/OnlineTutor2/wwwroot/css/password-toggle.css
+++ b/OnlineTutor2/wwwroot/css/password-toggle.css
@@ -1,7 +1,6 @@
-﻿//нужно проверить ссылки и выпилить
-
-.password-input-group {
+﻿.password-input-group {
     position: relative;
+    display: block;
 }
 
 .password-generator-group {
@@ -37,8 +36,7 @@
 .password-copy-btn {
     position: absolute;
     right: 45px;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 8px;
     border: none;
     background: transparent;
     color: #6c757d;
@@ -56,3 +54,9 @@
     .password-copy-btn:hover {
         color: #28a745;
     }
+
+.password-input-group input::placeholder {
+    font-size: 0.875rem;
+    color: #6c757d;
+    opacity: 0.7;
+}
