add calendar views

--- a/OnlineTutor2/Views/Shared/_Layout.cshtml
+++ b/OnlineTutor2/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#" class="dropdown-item">
+                                            <a asp-controller="Calendar" asp-action="Index" class="dropdown-item">
                                                 <i class="fas fa-calendar-alt"></i> Календарь
                                             </a>
                                         </li>
