--- a/OnlineTutor2/Views/Teacher/Index.cshtml
+++ b/OnlineTutor2/Views/Teacher/Index.cshtml
@@ -119,7 +119,7 @@
             </div>
             <div class="card-body d-flex flex-column">
                 <p class="card-text">Планирование уроков и событий.</p>
-                <a href="#" class="btn btn-primary mt-auto w-100">
+                <a asp-controller="Calendar" asp-action="Index" class="btn btn-primary mt-auto w-100">
                     <i class="fas fa-calendar-alt"></i> Календарь
                 </a>
             </div>
